<resources>
    <string name="app_name">Admiral UI Android</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="main_menu_home">Главная</string>
    <string name="main_menu_info">Инфо</string>
    <string name="main_menu_feedback">Обратная связь</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="menu_toolbar_pay">Оплатить</string>
    <string name="menu_toolbar_fill">Пополнить</string>
    <string name="menu_toolbar_more">Подробнее</string>
    <string name="menu_toolbar_settings">Настройки</string>
    <string name="home_section_cells_base">Base Cells</string>
    <string name="home_section_cells_text">Text Cells</string>
    <string name="home_section_components">Components</string>
    <string name="home_section_pin_keyboard_subtitle">Клавиатура для ввода пинкода</string>
    <string name="home_section_pin_keyboard_title">Pin Keyboard</string>
    <string name="home_section_themes_title">Themes</string>
    <string name="home_section_themes_subtitle">Цветовая схема и шрифтовые стили</string>
    <string name="home_section_icons_title">Icons</string>
    <string name="home_section_icons_subtitle">Набор иконок</string>
    <string name="home_section_buttons_title">Buttons</string>
    <string name="home_section_buttons_subtitle">Кнопки</string>
    <string name="home_section_text_fields_title">Text fields</string>
    <string name="home_section_text_fields_subtitle">Поля ввода</string>
    <string name="home_section_cells_title">Cells</string>
    <string name="home_section_cells_subtitle">Ячейки и списки</string>
    <string name="home_section_text_blocks_title">Text Blocks</string>
    <string name="home_section_text_blocks_subtitle">Текстовые блоки</string>
    <string name="home_section_tabs_title">Tabs</string>
    <string name="home_section_tabs_subtitle">Вкладки</string>
    <string name="home_section_informers_title">Informers &#38; Notifications</string>
    <string name="home_section_informers_subtitle">Информеры</string>
    <string name="home_section_tags_title">Tags &#38; Chips</string>
    <string name="home_section_tags_subtitle">Теги и чипсы</string>
    <string name="home_section_badges_title">Badges</string>
    <string name="home_section_badges_subtitle">Количественные зачения</string>
    <string name="home_section_radiobutton_title">Radiobutton</string>
    <string name="home_section_radiobutton_subtitle">Радио кнопка</string>
    <string name="home_section_checkbox_title">Checkbox</string>
    <string name="home_section_checkbox_subtitle">Селектор</string>
    <string name="home_section_switcher_title">Switcher</string>
    <string name="home_section_switcher_subtitle">Переключатель</string>
    <string name="home_section_links_title">Links</string>
    <string name="home_section_links_subtitle">Ссылки</string>
    <string name="home_section_spinner_title">Spinner</string>
    <string name="home_section_spinner_subtitle">Демонстрация процесса загрузки</string>
    <string name="home_section_page_control_title">Page Controls</string>
    <string name="home_section_page_control_subtitle">Прогресс просмотра страниц</string>
    <string name="home_section_shimmer_title">Shimmers</string>
    <string name="home_section_shimmer_subtitle">Демонстрация процесса загрузки</string>
    <string name="home_section_calendar_title">Calendar</string>
    <string name="home_section_calendar_subtitle">Календарь</string>
    <string name="home_section_time_picker_title">Time Picker</string>
    <string name="home_section_timer_picker_subtitle">Выбор времени</string>
    <string name="home_section_alert_title">Alerts</string>
    <string name="home_section_alert_subtitle">Информирующие сообщения</string>
    <string name="home_section_toolbar_title">Tool bar</string>
    <string name="home_section_toolbar_subtitle">Меню</string>
    <string name="home_section_bottom_sheet_title">Bottom-sheets</string>
    <string name="home_section_bottom_sheet_subtitle">Информационная панель</string>
    <string name="home_section_currency_title">Currency</string>
    <string name="home_section_currency_subtitle">Таблица курсов валют</string>
    <string name="home_section_chat_title">Chat</string>
    <string name="home_section_chat_subtitle">Элементы чата</string>
    <string name="home_section_map_title">Map Elements</string>
    <string name="home_section_map_subtitle">Элементы для карт</string>
    <string name="cell_title">Title</string>
    <string name="cell_subtitle">Subtitle</string>
    <string name="cell_button">Button</string>
    <string name="cell_percent">Percent</string>
    <string name="cell_date">Date</string>
    <string name="cell_subtitle_second">Subtitle 2</string>
    <string name="cell_summ">Summ</string>
    <string name="cell_more">More</string>
    <string name="cell_message">Message hello</string>
    <string name="cell_action">Действие</string>
    <string name="cell_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string-array name="courses">
        <item>algebra</item>
        <item>math</item>
        <item>history</item>
    </string-array>
    <string name="test_components_moscow">Moscow</string>
    <string name="bottom_sheet_title">Bottom-sheets</string>
    <string name="bottom_sheet_hint">Всплывающие окна отображаются в нижней части экрана, содержат
        дополнения к основному экрану и остаются видимыми, пока пользователи взаимодействуют с основным контентом.
        \n\nТакже являются альтернативой встроенным меню или простым диалоговым окнам на мобильных устройствах и
        предоставляют место для дополнительных элементов, более длинных описаний и значков.</string>
    <string name="bottom_sheet_action">Для вызова Bottom-sheet, нажмите кнопку</string>
    <string name="bottom_sheet_button">Показать Bottom-sheet</string>
    <string name="bottom_sheet_dialog_title">Выберите несколько карт</string>
    <string name="bottom_sheet_dialog_item_subtitle">Subtitle</string>
    <string name="bottom_sheet_dialog_item_title">Title</string>
    <string name="bottom_sheet_dialog_button_additional">Выбрать все карты</string>
    <string name="bottom_sheet_dialog_action">Готово</string>
    <string name="tabs_title">Tabs</string>
    <string name="tabs_underline_title">Underline Tabs</string>
    <string name="tabs_underline_slider_title">Underline Slider Tabs</string>
    <string name="tabs_slider_title">Slider</string>
    <string name="tabs_center_title">Center</string>
    <string name="tabs_standard_title">Standard Tabs</string>
    <string name="tabs_logo_title">Logo Tabs</string>
    <string name="tabs_icon_title">Icon Tabs</string>
    <string name="tabs_informer_title">Informer Tabs</string>
    <string name="tabs_outline_title">Outline Slider Tabs</string>
    <string name="tabs_underline_center_title">Underline Center Tabs</string>
    <string name="tabs_informer_example_title">то получу в страховом случае</string>
    <string name="tabs_informer_example_summ">до 1 500 000 ₽</string>
    <string name="tabs_informer_example_subtitle">Выгодный вариант для двухкомнатной квартиры или дачного дома</string>
    <string name="tabs_slider_control">Slider controls</string>
    <string name="tabs_notifications">Notifications</string>
    <string name="tabs_example_one">One</string>
    <string name="tabs_example_two">Two</string>
    <string name="tabs_example_three">Three</string>
    <string name="tabs_example_four">Four</string>
    <string name="tabs_example_five">Five</string>
    <string name="tabs_example_six">Six</string>
    <string name="tabs_example_seven">Seven</string>
    <string name="tabs_example_eight">Eight</string>
    <string name="tabs_example_nine">Nine</string>
    <string name="tabs_default">Default</string>
    <string name="tabs_success">Success</string>
    <string name="tabs_error">Error</string>
    <string name="tabs_disabled">Disabled</string>
    <string name="tabs_two_controls">Two controls</string>
    <string name="tabs_three_controls">Three controls</string>
    <string name="tabs_four_controls">Four controls</string>
    <string name="tabs_five_controls">Five controls</string>
    <string name="tabs_one">One</string>
    <string name="tabs_two">Two</string>
    <string name="tabs_three">Three</string>
    <string name="tabs_four">Four</string>
    <string name="tabs_five">Five</string>
    <string name="tabs_example_informer_tab_subtitle">в месяц</string>
    <string name="tabs_example_informer_tab_title">2 900 ₽</string>
    <string name="tabs_loading">Loading</string>
    <string name="stepper_completed">Completed</string>
    <string name="stepper_current">Current</string>
    <string name="stepper_next">Next</string>
    <string name="stepper_error">Error</string>
    <string name="stepper_disabled">Disabled</string>
    <string name="stepper_example_link">Link</string>
    <string name="stepper_example_subtitle">Subtitle</string>
    <string name="text_fields_default">Default</string>
    <string name="text_fields_error">Error</string>
    <string name="text_fields_disabled">Disabled</string>
    <string name="text_fields_slider_optional_label">Optional label</string>
    <string name="text_fields_example_slider_left">100</string>
    <string name="text_fields_example_slider_right">10 000</string>
    <string name="text_fields_example_slider_text">4 500</string>
    <string name="text_fields_example_slider_additional">Additional text</string>
    <string name="text_fields_slider_title">Slider</string>
    <string name="typography_title">Typography</string>
    <string name="typography_headlines">Headlines</string>
    <string name="typography_large_title_1">Large Title 1</string>
    <string name="typography_large_title_2">Large Title 2</string>
    <string name="typography_title_1">Title 1</string>
    <string name="typography_title_2">Title 2</string>
    <string name="typography_subtitle">Subtitle</string>
    <string name="typography_subtitle_1">Subtitle 1</string>
    <string name="typography_subtitle_2">Subtitle 2</string>
    <string name="typography_subtitle_3">Subtitle 3</string>
    <string name="typography_headline">Headline</string>
    <string name="typography_body">Body</string>
    <string name="typography_body_1">Body 1</string>
    <string name="typography_body_2">Body 2</string>
    <string name="typography_subhead">Subhead</string>
    <string name="typography_subhead_1">Subhead 1</string>
    <string name="typography_subhead_2">Subhead 2</string>
    <string name="typography_subhead_3">Subhead 3</string>
    <string name="typography_caption">Caption</string>
    <string name="typography_caption_1">Caption 1</string>
    <string name="typography_caption_2">Caption 2</string>
    <string name="typography_overline">Overline</string>
    <string name="chat_example_time">14:52</string>
    <string name="chat_text_operation_title">Text Operation</string>
    <string name="chat_text_operation_default">Default</string>
    <string name="chat_text_operation_success">Success</string>
    <string name="chat_text_operation_error">Error</string>
    <string name="chat_text_operation_date_time">13 мая 14:15</string>
    <string name="chat_text_operation_default_title">- 35 000 ₽</string>
    <string name="chat_text_operation_success_title">+ 35 000 ₽</string>
    <string name="chat_text_operation_error_title">Счёт ***6789 заблокирован</string>
    <string name="chat_text_operation_default_message">НПО «Ромашка»</string>
    <string name="chat_text_operation_success_message">@string/chat_text_operation_default_message</string>
    <string name="chat_text_operation_error_message">Оплатите задолженность</string>
</resources>