<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <com.admiral.uikit.layout.LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/module_x4">

        <com.admiral.uikit.components.appbar.Appbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.admiral.uikit.components.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="@string/chat_text_operation_title"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x11"
            android:text="@string/chat_text_operation_default"
            app:admiralTextColorNormalEnabledPalette="textSecondary"
            app:admiralTextStyle="headline" />

        <com.admiral.uikit.components.chat.textOperation.TextOperation
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x5"
            app:admiralDateTimeText="@string/chat_text_operation_date_time"
            app:admiralMessageStatus="send"
            app:admiralOperationType="defaultOperation"
            app:admiralText="@string/chat_text_operation_default_message"
            app:admiralTimeText="@string/chat_example_time"
            app:admiralTitleText="@string/chat_text_operation_default_title" />

        <com.admiral.uikit.components.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x10"
            android:text="@string/chat_text_operation_success"
            app:admiralTextColorNormalEnabledPalette="textSecondary"
            app:admiralTextStyle="headline" />

        <com.admiral.uikit.components.chat.textOperation.TextOperation
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x5"
            app:admiralDateTimeText="@string/chat_text_operation_date_time"
            app:admiralMessageStatus="send"
            app:admiralOperationType="successOperation"
            app:admiralText="@string/chat_text_operation_success_message"
            app:admiralTimeText="@string/chat_example_time"
            app:admiralTitleText="@string/chat_text_operation_success_title" />

        <com.admiral.uikit.components.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x11"
            android:text="@string/chat_text_operation_error"
            app:admiralTextColorNormalEnabledPalette="textSecondary"
            app:admiralTextStyle="headline" />

        <com.admiral.uikit.components.chat.textOperation.TextOperation
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x5"
            app:admiralDateTimeText="@string/chat_text_operation_date_time"
            app:admiralMessageStatus="send"
            app:admiralOperationType="errorOperation"
            app:admiralText="@string/chat_text_operation_error_message"
            app:admiralTimeText="@string/chat_example_time"
            app:admiralTitleText="@string/chat_text_operation_error_title" />

    </com.admiral.uikit.layout.LinearLayout>

</ScrollView>