<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainMenuHome"
        android:enabled="true"
        android:icon="@drawable/admiral_ic_card_solid"
        android:title="@string/menu_toolbar_pay" />
    <item
        android:id="@+id/mainMenuInfo"
        android:enabled="true"
        android:icon="@drawable/admiral_ic_get_cash_solid"
        android:title="@string/menu_toolbar_fill" />
    <item
        android:id="@+id/mainMenuFeedback"
        android:enabled="true"
        android:icon="@drawable/admiral_ic_info_solid"
        android:title="@string/menu_toolbar_more" />
    <item
        android:id="@+id/mainMenuSettings"
        android:enabled="true"
        android:icon="@drawable/admiral_ic_settings_solid"
        android:title="@string/main_menu_settings" />
</menu>