<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.admiral.uikit.components.appbar.Appbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/typography_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <com.admiral.uikit.layout.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/module_x4">

            <com.admiral.uikit.components.text.TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x7"
                android:text="@string/typography_headlines"
                app:admiralTextColorNormalEnabled="@color/grey_40"
                app:admiralTextStyle="headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admiralTextView4" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_large_title_1"
                app:admiralTextStyle="largetitle1" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_large_title_2"
                app:admiralTextStyle="largetitle2" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_title_1"
                app:admiralTextStyle="title1" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_title_2"
                app:admiralTextStyle="title2" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x7"
                android:text="@string/typography_subtitle"
                app:admiralTextColorNormalEnabled="@color/grey_40"
                app:admiralTextStyle="headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admiralTextView4" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_subtitle_1"
                app:admiralTextStyle="subtitle1" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_subtitle_2"
                app:admiralTextStyle="subtitle2" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_subtitle_3"
                app:admiralTextStyle="subtitle3" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_headline"
                app:admiralTextStyle="headline" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x7"
                android:text="@string/typography_body"
                app:admiralTextColorNormalEnabled="@color/grey_40"
                app:admiralTextStyle="headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admiralTextView4" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_body_1"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_body_2"
                app:admiralTextStyle="body2" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x7"
                android:text="@string/typography_subhead"
                app:admiralTextColorNormalEnabled="@color/grey_40"
                app:admiralTextStyle="headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admiralTextView4" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_subhead_1"
                app:admiralTextStyle="subhead1" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_subhead_2"
                app:admiralTextStyle="subhead2" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_subhead_3"
                app:admiralTextStyle="subhead3" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_caption"
                app:admiralTextStyle="subhead1" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_caption_1"
                app:admiralTextStyle="caption1" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_caption_2"
                app:admiralTextStyle="caption2" />

            <com.admiral.uikit.components.text.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/module_x4"
                android:layout_marginTop="@dimen/module_x6"
                android:text="@string/typography_overline"
                app:admiralTextStyle="overline" />

        </com.admiral.uikit.layout.LinearLayout>
    </ScrollView>
</LinearLayout>
