<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.admiral.uikit.layout.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.admiral.uikit.components.appbar.Appbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.admiral.uikit.components.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="@string/text_fields_slider_title"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.tabs.StandardTabs
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@+id/defaultTab">

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/defaultTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fields_default"
                app:admiralUnderlinePadding="2dp" />

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fields_error"
                app:admiralUnderlinePadding="2dp" />

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fields_disabled"
                app:admiralUnderlinePadding="2dp" />

        </com.admiral.uikit.components.tabs.StandardTabs>

        <com.admiral.uikit.components.textfield.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            app:admiralIcon="@drawable/admiral_ic_info_outline"
            app:admiralLeftText="@string/text_fields_example_slider_left"
            app:admiralRightText="@string/text_fields_example_slider_right"
            app:admiralText="@string/text_fields_example_slider_text"
            app:admiralTextAdditional="@string/text_fields_example_slider_additional"
            app:admiralTextOptional="@string/text_fields_slider_optional_label" />

        <com.admiral.uikit.components.textfield.DoubleSlider
            android:id="@+id/doubleSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            app:admiralLeftText="@string/text_fields_example_slider_left"
            app:admiralRightText="@string/text_fields_example_slider_right"
            app:admiralText="@string/text_fields_example_slider_text"
            app:admiralTextAdditional="@string/text_fields_example_slider_additional"
            app:admiralTextOptional="@string/text_fields_slider_optional_label" />

    </com.admiral.uikit.layout.LinearLayout>

</ScrollView>
